Adding swagger json
